--- a/.shrc
+++ b/.shrc
@@ -319,16 +319,22 @@ puthash() {
 }
 
 gfixup() {
-	local main_branch hash
+	local branch hash
 
-	main_branch="$(git branch --no-color --list 'ma*' | sed -rn 's,^\*?[[:space:]]+(main|master)$,\1,p;q')"
-	test -n "${main_branch}" || return 201
+	branch="$(git --no-pager branch --no-color --show-current)"
+	test -n "${branch}" || return 201
 
-	hash=$(git cherry "${main_branch}" | sed 's/.*[[:space:]]//;q')
-	test -n "${hash}" || hash=$(git rev-parse --short HEAD) || return 202
-	test -n "${hash}" || return 203
+	hash=$(git --no-pager log --no-color --max-count=1 --pretty=%h "${branch}")
+	test -n "${hash}" || return 202
 
-	git reset --soft "${hash}" && git commit --all --amend --no-edit
+	branch="$(git --no-pager branch --no-color --list 'ma*' | sed -rn 's,^\*?[[:space:]]+(main|master)$,\1,p;q')"
+	test -n "${branch}" || return 203
+
+	hash=$(git --no-pager cherry "${branch}" | sed 's/.*[[:space:]]//;q')
+	test -n "${hash}" || hash=$(git --no-pager rev-parse --short HEAD) || return 204
+	test -n "${hash}" || return 205
+
+	git --no-pager reset --soft "${hash}" && git --no-pager commit --all --amend --no-edit
 }
 
 getag() {
