--- a/.shrc
+++ b/.shrc
@@ -28,68 +28,6 @@ alias pi='/sbin/ping -n -c5 -s16 -W5000 8.8.8.8'
 alias trace='/usr/sbin/traceroute -q1 -n'
 
 case "${OSTYPE}" in
-	freebsd*)
-		PREFIX='/usr/local'
-		GIT="${PREFIX}/bin/git"
-		CURL="${PREFIX}/bin/curl"
-
-		# shellcheck disable=SC2139
-		test -x "${PREFIX}/bin/doas" && alias sudo="${PREFIX}/bin/doas"
-
-		# shellcheck disable=SC2139
-		alias cdd="cd /usr${HOME}/src"
-		# shellcheck disable=SC2139
-		test -d "/usr${HOME}/src" || alias cdd="cd ${HOME}/src"
-
-		alias gdb='/usr/libexec/gdb'
-		alias ss='/usr/bin/sockstat'
-		# shellcheck disable=SC2139
-		alias sd="sudo ${PREFIX}/bin/deco"
-		# shellcheck disable=SC2139
-		alias t="${PREFIX}/bin/terraform"
-		alias k='kubectl'
-
-		# shellcheck disable=SC2139
-		alias pkg_ver="${PREFIX}/sbin/pkg-static version -vL= | /usr/bin/grep --extended-regex --invert-match '[[:space:]]>[[:space:]]|[[:space:]]orphaned[:[:space:]]+local/' | /usr/bin/less --no-init --quit-if-one-screen"
-		# shellcheck disable=SC2139
-		alias pkg_vers="${PREFIX}/sbin/pkg-static version -vL= | /usr/bin/less --no-init --quit-if-one-screen"
-		# shellcheck disable=SC2139
-		alias portver="portsnap fetch update && ${PREFIX}/sbin/pkg-static version -vL= | /usr/bin/grep --extended-regex --invert-match '[[:space:]]>[[:space:]]|[[:space:]]orphaned[:[:space:]]+local/'"
-		# shellcheck disable=SC2139
-		alias portupg="time /usr/bin/nice -n32 ${PREFIX}/sbin/portmaster --no-confirm --no-term-title -Bdgty -x doas -x sudo"
-		alias pkgupg="time /usr/bin/nice -n32 ${PREFIX}/sbin/portmaster --no-confirm --no-term-title -Bdty --packages-only --packages-local --local-packagedir=$(make -C / -V PORTSDIR)/packages -x pkg -x doas -x sudo"
-
-		# shellcheck disable=SC2154,SC2139
-		alias port_extract='test "${PWD##/usr/ports/*/}" != "${PWD}" && /bin/rm -rf -- Makefile.local && pkg_origin=$(/usr/bin/make -V PKGORIGIN) && test -n "${pkg_origin}" && pkg_pwd="${PWD}" && cd .. && '"${PREFIX}"'/bin/doas /bin/rm -rf -- "${pkg_pwd##*/}" && portsnap extract "${pkg_origin}/" && cd "${pkg_pwd}"'
-
-		alias mkadl='/usr/bin/nice -n32 /usr/bin/make all-depends-list'
-		# shellcheck disable=SC2139
-		alias mkcfg="${PREFIX}/bin/doas /usr/bin/make config"
-		# shellcheck disable=SC2139
-		alias mkcfgr="/usr/bin/nice -n32 ${PREFIX}/bin/doas /usr/bin/make config-recursive"
-		#alias mkcal="{ WRKDIR=\$(/usr/bin/make -V WRKDIR) && test -d \"\${WRKDIR}\" && /usr/bin/nice -n32 ${PREFIX}/bin/doas /usr/bin/find \"\${WRKDIR}\" -mindepth 2 -maxdepth 2 -name '.*' -uid 0 -exec /usr/sbin/chown -v \$(/usr/bin/id -u) {} \+ && /usr/bin/nice -n32 ${PREFIX}/bin/doas /bin/rm -rf -- \"\${WRKDIR}/pkg\" \"\${WRKDIR}/.metadir\"; set -o pipefail && /usr/bin/time /usr/bin/nice -n32 /usr/bin/make clean all 2>&1 | /usr/bin/tee build.log; }"
-		# shellcheck disable=SC2139
-		alias mkcal="${PREFIX}/bin/doas /usr/bin/make clean && set -o pipefail && /usr/bin/time /usr/bin/nice -n32 /usr/bin/make all 2>&1 | /usr/bin/tee build.log"
-		# shellcheck disable=SC2139
-		alias instpc="/usr/bin/nice -n32 ${PREFIX}/bin/doas /usr/bin/make package deinstall install clean"
-		alias zfsget='/sbin/zfs get mountpoint,canmount,mounted,checksum,compression,compressratio,dedup,atime,devices,exec,setuid,xattr,readonly,primarycache,secondarycache,logbias,sync,volsize,volblocksize'
-		alias kldsize='echo $(($(kldstat | sed -rn "s/^[[:space:]]*[[:digit:]].*[[:space:]]([[:xdigit:]]+)[[:space:]]+[^[:space:]]+[[:space:]]*\$/+0x\1/p")))'
-		alias sh_='exec /bin/sh'
-
-		alias mk_venv='python -m venv env --system-site-packages --symlinks --prompt "\[\033[1;33m\]${PWD##*/}\[\033[0m\]" && source env/bin/activate && pip install --upgrade --quiet --progress-bar off pip setuptools'
-		alias mk_venv3.9='python3.9 -m venv env --prompt "\[\033[1;32m\]${PWD##*/}\[\033[0m\]" && source env/bin/activate'
-		alias activate='test -s env/bin/activate && . env/bin/activate'
-		alias pip_upgrade="test -z \"\${VIRTUAL_ENV}\" || pip list --outdated --format=freeze | sed -rn -e '/^(-e|evdev|spyder|isort|lazy-object-proxy)/d' -e 's/=.*//p' | xargs pip install --upgrade"
-		alias pip_upgrade_list="test -z \"\${VIRTUAL_ENV}\" || pip list --outdated --format=freeze | sed -rn -e '/^-e/d'"
-
-		#alias jmail="${PREFIX}/bin/doas /usr/sbin/jexec mail /usr/bin/su -l ${USER}"
-		#alias hast1="${PREFIX}/bin/doas /sbin/hastctl status -c /etc/hast1.conf"
-		#alias hast2="${PREFIX}/bin/doas /sbin/hastctl status -c /etc/hast2.conf"
-		#if [ -n "${BASH}" ] && [ -x /usr/local/bin/starship ]; then
-		#	# shellcheck disable=SC1090
-		#	source <(/usr/local/bin/starship init bash --print-full-init)
-		#fi
-		;;
 	darwin*)
 		PREFIX='/opt/homebrew'
 		GIT='/usr/bin/git'
@@ -148,6 +86,67 @@ case "${OSTYPE}" in
 
 		alias doas='/usr/bin/sudo'
 		alias sd='/usr/bin/sudo /usr/bin/mc'
+		;;
+	*) # freebsd including /bin/sh is run
+		PREFIX='/usr/local'
+		GIT="${PREFIX}/bin/git"
+		CURL="${PREFIX}/bin/curl"
+
+		# shellcheck disable=SC2139
+		test -x "${PREFIX}/bin/doas" && alias sudo="${PREFIX}/bin/doas"
+
+		# shellcheck disable=SC2139
+		alias cdd="cd /usr${HOME}/src"
+		# shellcheck disable=SC2139
+		test -d "/usr${HOME}/src" || alias cdd="cd ${HOME}/src"
+
+		alias ss='/usr/bin/sockstat'
+		# shellcheck disable=SC2139
+		alias sd="sudo ${PREFIX}/bin/deco"
+		# shellcheck disable=SC2139
+		alias t="${PREFIX}/bin/terraform"
+		alias k='kubectl'
+
+		# shellcheck disable=SC2139
+		alias pkg_ver="${PREFIX}/sbin/pkg-static version -vL= | /usr/bin/grep --extended-regex --invert-match '[[:space:]]>[[:space:]]|[[:space:]]orphaned[:[:space:]]+local/' | /usr/bin/less --no-init --quit-if-one-screen"
+		# shellcheck disable=SC2139
+		alias pkg_vers="${PREFIX}/sbin/pkg-static version -vL= | /usr/bin/less --no-init --quit-if-one-screen"
+		# shellcheck disable=SC2139
+		alias portver="portsnap fetch update && ${PREFIX}/sbin/pkg-static version -vL= | /usr/bin/grep --extended-regex --invert-match '[[:space:]]>[[:space:]]|[[:space:]]orphaned[:[:space:]]+local/'"
+		# shellcheck disable=SC2139
+		alias portupg="time /usr/bin/nice -n32 ${PREFIX}/sbin/portmaster --no-confirm --no-term-title -Bdgty -x doas -x sudo"
+		alias pkgupg="time /usr/bin/nice -n32 ${PREFIX}/sbin/portmaster --no-confirm --no-term-title -Bdty --packages-only --packages-local --local-packagedir=$(make -C / -V PORTSDIR)/packages -x pkg -x doas -x sudo"
+
+		# shellcheck disable=SC2154,SC2139
+		alias port_extract='test "${PWD##/usr/ports/*/}" != "${PWD}" && /bin/rm -rf -- Makefile.local && pkg_origin=$(/usr/bin/make -V PKGORIGIN) && test -n "${pkg_origin}" && pkg_pwd="${PWD}" && cd .. && '"${PREFIX}"'/bin/doas /bin/rm -rf -- "${pkg_pwd##*/}" && portsnap extract "${pkg_origin}/" && cd "${pkg_pwd}"'
+
+		alias mkadl='/usr/bin/nice -n32 /usr/bin/make all-depends-list'
+		# shellcheck disable=SC2139
+		alias mkcfg="${PREFIX}/bin/doas /usr/bin/make config"
+		# shellcheck disable=SC2139
+		alias mkcfgr="/usr/bin/nice -n32 ${PREFIX}/bin/doas /usr/bin/make config-recursive"
+		#alias mkcal="{ WRKDIR=\$(/usr/bin/make -V WRKDIR) && test -d \"\${WRKDIR}\" && /usr/bin/nice -n32 ${PREFIX}/bin/doas /usr/bin/find \"\${WRKDIR}\" -mindepth 2 -maxdepth 2 -name '.*' -uid 0 -exec /usr/sbin/chown -v \$(/usr/bin/id -u) {} \+ && /usr/bin/nice -n32 ${PREFIX}/bin/doas /bin/rm -rf -- \"\${WRKDIR}/pkg\" \"\${WRKDIR}/.metadir\"; set -o pipefail && /usr/bin/time /usr/bin/nice -n32 /usr/bin/make clean all 2>&1 | /usr/bin/tee build.log; }"
+		# shellcheck disable=SC2139
+		alias mkcal="${PREFIX}/bin/doas /usr/bin/make clean && set -o pipefail && /usr/bin/time /usr/bin/nice -n32 /usr/bin/make all 2>&1 | /usr/bin/tee build.log"
+		# shellcheck disable=SC2139
+		alias instpc="/usr/bin/nice -n32 ${PREFIX}/bin/doas /usr/bin/make package deinstall install clean"
+		alias zfsget='/sbin/zfs get mountpoint,canmount,mounted,checksum,compression,compressratio,dedup,atime,devices,exec,setuid,xattr,readonly,primarycache,secondarycache,logbias,sync,volsize,volblocksize'
+		alias kldsize='echo $(($(kldstat | sed -rn "s/^[[:space:]]*[[:digit:]].*[[:space:]]([[:xdigit:]]+)[[:space:]]+[^[:space:]]+[[:space:]]*\$/+0x\1/p")))'
+		alias sh_='exec /bin/sh'
+
+		alias mk_venv='python -m venv env --system-site-packages --symlinks --prompt "\[\033[1;33m\]${PWD##*/}\[\033[0m\]" && source env/bin/activate && pip install --upgrade --quiet --progress-bar off pip setuptools'
+		alias mk_venv3.9='python3.9 -m venv env --prompt "\[\033[1;32m\]${PWD##*/}\[\033[0m\]" && source env/bin/activate'
+		alias activate='test -s env/bin/activate && . env/bin/activate'
+		alias pip_upgrade="test -z \"\${VIRTUAL_ENV}\" || pip list --outdated --format=freeze | sed -rn -e '/^(-e|evdev|spyder|isort|lazy-object-proxy)/d' -e 's/=.*//p' | xargs pip install --upgrade"
+		alias pip_upgrade_list="test -z \"\${VIRTUAL_ENV}\" || pip list --outdated --format=freeze | sed -rn -e '/^-e/d'"
+
+		#alias jmail="${PREFIX}/bin/doas /usr/sbin/jexec mail /usr/bin/su -l ${USER}"
+		#alias hast1="${PREFIX}/bin/doas /sbin/hastctl status -c /etc/hast1.conf"
+		#alias hast2="${PREFIX}/bin/doas /sbin/hastctl status -c /etc/hast2.conf"
+		#if [ -n "${BASH}" ] && [ -x /usr/local/bin/starship ]; then
+		#	# shellcheck disable=SC1090
+		#	source <(/usr/local/bin/starship init bash --print-full-init)
+		#fi
 		;;
 esac
 
@@ -387,11 +386,24 @@ getag() {
 	main_branch="$(git --no-pager branch --no-color --list main master | sed -rn 's/^\*?[[:space:]]+//p;q')"
 	test -n "${main_branch}" || return 201
 
-	hash=$(git --no-pager log --max-count=1 --pretty=%h --invert-grep --extended-regexp --grep='\[(ci[[:space:]]+skip|skip[[:space:]]+ci)\]' "${main_branch}" -- "${1:-.}") || return 203 #'
+	hash=$(git --no-pager log --no-color --max-count=1 --pretty=%h --invert-grep --extended-regexp --grep='\[(ci[[:space:]]+skip|skip[[:space:]]+ci)\]' "${main_branch}" -- "${1:-.}") || return 203 #'
 	test -n "${hash}" || return 202
 
-	git tag --contains "${hash}" --sort version:refname | sed -r '/^v[[:digit:].]+$/!d;q'
+	git --no-pager tag --no-color --contains "${hash}" --sort version:refname | sed -r '/^v[[:digit:].]+$/!d;q'
 }
+
+getags() {
+	local main_branch hash
+	main_branch="$(git --no-pager branch --no-color --list main master | sed -rn 's/^\*?[[:space:]]+//p;q')"
+	test -n "${main_branch}" || return 201
+
+	git --no-pager log --no-color --pretty=%h \
+		--invert-grep --extended-regexp --grep='\[(ci[[:space:]]+skip|skip[[:space:]]+ci)\]' \
+		"${main_branch}" -- "${1:-.}" | while read -r hash; do
+		git --no-pager tag --no-color --contains "${hash}" --sort version:refname | sed -r '/^v[[:digit:].]+$/!d;q'
+	done
+}
+
 
 unset CURL
 
