--- a/.shrc
+++ b/.shrc
@@ -363,22 +363,20 @@ puthash() {
 }
 
 gfixup() {
-	local branch hash
+	local main branch_root first_commit_id
+	main=$(git --no-pager branch --no-color --list main master | sed -rn 's/^\*?[[:space:]]+//p;q')
+	test -n "${main}" || return 201
 
-	branch="$(git --no-pager branch --no-color --show-current)"
-	test -n "${branch}" || return 201
+	branch_root=$(git --no-pager merge-base HEAD "origin/${main}")
+	test -n "${branch_root}" || return 202
 
-	hash="$(git --no-pager log --no-color --max-count=1 --pretty=%h ${branch})"
-	test -n "${hash}" || return 202
+	first_commit_id=$(git --no-pager log --no-color --reverse --format=%H "${branch_root}..HEAD" | head -1)
+	if [ -z "${first_commit_id}" ]; then
+		echo "Cannot find the first commit" >&2
+		return 203
+	fi
 
-	branch="$(git --no-pager branch --no-color --list main master | sed -rn 's/^\*?[[:space:]]+//p;q')"
-	test -n "${branch}" || return 203
-
-	hash="$(git --no-pager cherry ${branch} | sed 's/.*[[:space:]]//;q')"
-	test -n "${hash}" || hash="$(git --no-pager rev-parse --short HEAD)" || return 204
-	test -n "${hash}" || return 205
-
-	git --no-pager reset --soft "${hash}" && git --no-pager commit --all --amend --no-edit
+	git --no-pager reset --soft "${first_commit_id}" && git --no-pager commit --all --amend --no-edit
 }
 
 getag() {
